--- a/.github/workflows/destroy_connectivity_hub.yml
+++ b/.github/workflows/destroy_connectivity_hub.yml
@@ -42,7 +42,7 @@ jobs:
       backend_storage_container: ${{ vars.BACKEND_STORAGE_CONTAINER }}
       backend_subscription_id: ${{ vars.BACKEND_SUBSCRIPTION_ID }}
       arm_client_id: ${{ vars.ARM_CLIENT_ID }}
-      arm_subscription_id: ${{ vars.ARM_SUBSCRIPTION_ID
+      arm_subscription_id: ${{ vars.ARM_SUBSCRIPTION_ID }}
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
