--- a/.github/workflows/deploy_connectivity_hub.yml
+++ b/.github/workflows/deploy_connectivity_hub.yml
@@ -18,6 +18,8 @@ on:
       - "modules/stack/hub/**"
       - "modules/stack/bastion/**"
       - ".github/workflows/**"
+      - "!.github/workflows/destroy_connectivity_hub.yml"
+      - "!.github/workflows/terraform_plan_destroy.yml"
 
 jobs:
   invoke_hub_deploy:
