--- a/.github/workflows/terraform_plan_apply.yml
+++ b/.github/workflows/terraform_plan_apply.yml
@@ -126,12 +126,14 @@ jobs:
       # Create string output of Terraform Plan
       - name: Create String Output
         id: tf-plan-string
+        env:
+          STACK: ${{ inputs.stack }}
         run: |
           TERRAFORM_PLAN=$(terraform -chdir=$WORKING_DIR show -no-color tfplan)
 
           delimiter="$(openssl rand -hex 8)"
           echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-          echo "## Terraform Plan Output - $ENVIRONMENT" >> $GITHUB_OUTPUT
+          echo "## Terraform Plan Output - $ENVIRONMENT - $STACK" >> $GITHUB_OUTPUT
           echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
           echo "" >> $GITHUB_OUTPUT
           echo '```terraform' >> $GITHUB_OUTPUT
