--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,30 @@
 repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+    # Git style
+    - id: check-added-large-files
+    - id: check-merge-conflict
+    - id: check-vcs-permalinks
+    - id: forbid-new-submodules
+    - id: no-commit-to-branch
+    # Common errors
+    - id: end-of-file-fixer
+    - id: trailing-whitespace
+      args: [--markdown-linebreak-ext=md]
+      exclude: CHANGELOG.md
+    - id: check-yaml
+    - id: check-merge-conflict
+    - id: check-executables-have-shebangs
+    - id: check-case-conflict
+    - id: mixed-line-ending
+      args: [--fix=lf]
+    # Cross platform
+    - id: detect-private-key
 - repo: https://github.com/antonbabenko/pre-commit-terraform
   rev: v1.83.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
   hooks:
+    # Terraform
     - id: terraform_fmt
     - id: terraform_docs
     - id: terraform_tflint
@@ -9,9 +32,12 @@ repos:
     # - id: terraform_providers_lock
     # - id: terraform_tfsec
     # - id: terrascan
-    # - id: tfupdate
-    #   args:
-    #   - --args=--version 1.2.7
+    - id: tfupdate
+      args:
+      - --args=terraform --version '>= 1.4.6'
+    - id: tfupdate
+      args:
+      - --args=provider --version '>= 3.71.0' azurerm
     # - id: infracost_breakdown
     #   args:
     #     - --args=--path=.
