--- a/.github/workflows/deploy_connectivity_hub.yml
+++ b/.github/workflows/deploy_connectivity_hub.yml
@@ -37,18 +37,18 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-  invoke_hub_bastion_host_deploy:
-    strategy:
-      matrix:
-        environment: [nprd, sim]
-    name: Deploy Hub Bastion Host
-    uses: ./.github/workflows/terraform_plan_apply.yml
-    needs: invoke_hub_deploy
-    with:
-      environment: ${{ matrix.environment }}
-      tenant: db
-      stack: bastion
-      key: hub_bastion
-    secrets:
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  # invoke_hub_bastion_host_deploy:
+  #   strategy:
+  #     matrix:
+  #       environment: [nprd, sim]
+  #   name: Deploy Hub Bastion Host
+  #   uses: ./.github/workflows/terraform_plan_apply.yml
+  #   needs: invoke_hub_deploy
+  #   with:
+  #     environment: ${{ matrix.environment }}
+  #     tenant: db
+  #     stack: bastion
+  #     key: hub_bastion
+  #   secrets:
+  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
