--- a/.github/workflows/terraform_plan_apply.yml
+++ b/.github/workflows/terraform_plan_apply.yml
@@ -62,7 +62,8 @@ jobs:
       ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
       #this is needed since we are running terraform with read-only permissions
       ARM_SKIP_PROVIDER_REGISTRATION: true
-      WORKING_DIR: "modules/stack/${{ inputs.stack }}"
+      # WORKING_DIR: "modules/stack/${{ inputs.stack }}"
+      WORKING_DIR: "envs/${{inputs.environment}}/${{ inputs.stack }}"
       ENVIRONMENT: ${{ vars.ENVIRONMENT }}
     outputs:
       tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
@@ -179,7 +180,8 @@ jobs:
       ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
       #this is needed since we are running terraform with read-only permissions
       ARM_SKIP_PROVIDER_REGISTRATION: true
-      WORKING_DIR: "modules/stack/${{ inputs.stack }}"
+      # WORKING_DIR: "modules/stack/${{ inputs.stack }}"
+      WORKING_DIR: "envs/${{inputs.environment}}/${{ inputs.stack }}"
       ENVIRONMENT: ${{ vars.ENVIRONMENT }}
 
     steps:
