--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ crash.*.log
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
+!*.auto.tfvars
 *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
