--- a/.github/workflows/terraform_plan_apply.yml
+++ b/.github/workflows/terraform_plan_apply.yml
@@ -152,7 +152,7 @@ jobs:
 
       # If this is a PR post the changes
       - name: Push Terraform Output to PR
-        if: github.ref != 'refs/heads/main'
+        if: github.ref != 'refs/heads/main' && github.event_name == 'pull_request'
         uses: actions/github-script@v6
         env:
           SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
