feat: Improves tagging for resources (#6)
* Adds init shell scripts

* Adds Key Vault Module

* Adds env root modules

* Testing

* Testing

* This should fail

* Updates tf and provider versions

* Adds front door

* Removes modules - updates bastion modules source

* Switches to remote modules

* Externalizes PrivateDNSZone

* Adds AzureMonitor Stack

* feat: Many fixes and optimizations

* fix: Update pipelines to work with new env root modules (#5)

* Updates pipeline for envs
* push tfvars
* Updates sim address_space var
* Only push to PR on PR

* Improves tagging

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ crash.*.log
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
+!*.auto.tfvars
 *.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
@@ -51,3 +52,4 @@ override.tf.json
 terraform.rc
 apply.sh
 destroy.sh
+init.sh
