--- a/.github/workflows/deploy_connectivity_hub.yml
+++ b/.github/workflows/deploy_connectivity_hub.yml
@@ -30,7 +30,7 @@ jobs:
     name: Deploy ${{ matrix.environment }} Hub Network and Firewalls
     uses: ./.github/workflows/terraform_plan_apply.yml
     with:
-      environment: ${{ matrix.environment }}}
+      environment: ${{ matrix.environment }}
       tenant: db
       stack: hub
       key: hub_landing_zone
@@ -38,20 +38,20 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-  invoke_hub_deploy_sim:
-    # strategy:
-      # matrix:
-        # environment: [nprd, sim]
-    name: Deploy Hub Network and Firewalls
-    uses: ./.github/workflows/terraform_plan_apply.yml
-    with:
-      environment: sim
-      tenant: db
-      stack: hub
-      key: hub_landing_zone
-    secrets:
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  # invoke_hub_deploy_sim:
+  #   # strategy:
+  #     # matrix:
+  #       # environment: [nprd, sim]
+  #   name: Deploy Hub Network and Firewalls
+  #   uses: ./.github/workflows/terraform_plan_apply.yml
+  #   with:
+  #     environment: sim
+  #     tenant: db
+  #     stack: hub
+  #     key: hub_landing_zone
+  #   secrets:
+  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
   # invoke_hub_bastion_host_deploy:
   #   strategy:
