--- a/.github/workflows/deploy_connectivity_hub.yml
+++ b/.github/workflows/deploy_connectivity_hub.yml
@@ -37,7 +37,7 @@ jobs:
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_VAR_TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
+      TFC_TOKEN: ${{ secrets.TFC_TOKEN }}
 
   # invoke_hub_bastion_host_deploy:
   #   strategy:
