--- a/.github/workflows/deploy_connectivity_hub.yml
+++ b/.github/workflows/deploy_connectivity_hub.yml
@@ -38,19 +38,35 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
-  # invoke_hub_bastion_host_deploy:
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       environment: [nprd, sim]
-  #   name: Deploy ${{ matrix.environment }} Hub Bastion Host
-  #   uses: ./.github/workflows/terraform_plan_apply.yml
-  #   needs: invoke_hub_deploy
-  #   with:
-  #     environment: ${{ matrix.environment }}
-  #     tenant: db
-  #     stack: bastion
-  #     key: hub_bastion
-  #   secrets:
-  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  invoke_hub_bastion_host_deploy:
+    strategy:
+      fail-fast: false
+      matrix:
+        environment: [nprd, sim]
+    name: Deploy ${{ matrix.environment }} Hub Bastion Host
+    uses: ./.github/workflows/terraform_plan_apply.yml
+    needs: invoke_hub_deploy
+    with:
+      environment: ${{ matrix.environment }}
+      tenant: db
+      stack: bastion
+      key: hub_bastion
+    secrets:
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+  invoke_hub_azuremonitor_deploy:
+    strategy:
+      fail-fast: false
+      matrix:
+        environment: [nprd, sim]
+    name: Deploy ${{ matrix.environment }} Hub Azure Monitor
+    uses: ./.github/workflows/terraform_plan_apply.yml
+    with:
+      environment: ${{ matrix.environment }}
+      tenant: db
+      stack: azuremonitor
+      key: hub_azure_monitor
+    secrets:
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
