--- a/.github/workflows/destroy_connectivity_hub.yml
+++ b/.github/workflows/destroy_connectivity_hub.yml
@@ -6,15 +6,32 @@ on:
 jobs:
   invoke_hub_bastion_host_destroy:
     strategy:
+      fail-fast: false
       matrix:
         environment: [nprd, sim]
-    name: ${{ matrix.environment }} - Destroy Hub Bastion Host
+    name: Destroy ${{ matrix.environment }} Hub Bastion Host
     uses: ./.github/workflows/terraform_plan_destroy.yml
     with:
       environment: ${{ matrix.environment }}
       tenant: db
       stack: bastion
       key: hub_bastion
+    secrets:
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+  invoke_hub_azuremonitor_destroy:
+    strategy:
+      fail-fast: false
+      matrix:
+        environment: [nprd, sim]
+    name: Deploy ${{ matrix.environment }} Hub Azure Monitor
+    uses: ./.github/workflows/terraform_plan_destroy.yml
+    with:
+      environment: ${{ matrix.environment }}
+      tenant: db
+      stack: azuremonitor
+      key: hub_azure_monitor
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
